// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff basic rules config 1`] = `
"
[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[42m[37m PASS [39m[49m[22m [1mGET[22m /example


  [1m[42m[37m PASS [39m[49m[22m [1mPATCH[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPUT[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /invalid_name
    requirement rule: operation path component naming check
      [31m[31mx[39m[31m invalid_name is not camelCase[39m
      at [4m$workspace$/example-api-v1.json:31:632[24m



1 operation added, 3 changed, 1 removed
[32m[1m3 checks passed[22m[39m
[31m[1m2 checks failed[22m[39m

Configure check standards in optic cloud or your local optic.dev.yml file.
[34mRerun this command with the --web flag to view the detailed changes in your browser[39m
"
`;

exports[`diff breaking changes exclusion 1`] = `
"
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mPOST[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /x-optic-ignore-breaking-changes, /parameters [32madded[39m
  - /operationId [33mchanged[39m
  
4 operations changed
[32m[1m0 checks passed[22m[39m
[31m[1m0 checks failed[22m[39m

Configure check standards in optic cloud or your local optic.dev.yml file.
[34mRerun this command with the --web flag to view the detailed changes in your browser[39m
"
`;

exports[`diff petstore diff 1`] = `
"
specification details:
- /components/schemas/User/properties/bio, /components/schemas/User/properties/userStatus/enum, /components/schemas/User/required/2, /components/schemas/Order/properties/summary, /components/schemas/Order/properties/status/enum/2, /servers/2 [32madded[39m
- /components/schemas/User/properties/userStatus/type, /info/title [33mchanged[39m
- /components/schemas/User/properties/phone, /components/schemas/User/properties/userStatus/format, /components/schemas/User/required/2, /components/schemas/Order/properties/status/enum/1 [31mremoved[39m

[1mGET[22m /parameters_at_path: [32madded[39m
  
[1mGET[22m /pet/findByStatus: [32madded[39m
  
[1mGET[22m /pet/findByTags: [32madded[39m
  
[1mGET[22m /pet/{petId}: [32madded[39m
  
[1mPOST[22m /pet/{petId}: [32madded[39m
  
[1mDELETE[22m /pet/{petId}: [32madded[39m
  
[1mPUT[22m /user/{username}: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/properties/bio, /schema/properties/userStatus/enum, /schema/required/2 [32madded[39m
      - /schema/properties/userStatus/type [33mchanged[39m
      - /schema/properties/phone, /schema/properties/userStatus/format, /schema/required/2 [31mremoved[39m
      
[1mGET[22m /user/{username}: 
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/bio, /schema/properties/userStatus/enum, /schema/required/2 [32madded[39m
      - /schema/properties/userStatus/type [33mchanged[39m
      - /schema/properties/phone, /schema/properties/userStatus/format, /schema/required/2 [31mremoved[39m
      
    - body [1mapplication/xml[22m: 
      - /schema/properties/bio, /schema/properties/userStatus/enum, /schema/required/2 [32madded[39m
      - /schema/properties/userStatus/type [33mchanged[39m
      - /schema/properties/phone, /schema/properties/userStatus/format, /schema/required/2 [31mremoved[39m
      
  - response [1m404[22m: 
    - body [1mapplication/json[22m: [32madded[39m
      
[1mGET[22m /user/login: 
  - response [1m200[22m: 
    - response header [3mcontent-type[23m: [31mremoved[39m
    - response header [3mX-Rate-Limit[23m: [32madded[39m
      
    - response header [3mX-Expires-After[23m: 
      - /schema/type [33mchanged[39m
      
    - response header [3mX-Expires-After[23m: [32madded[39m
      - /schema/format [32madded[39m
      
[1mPOST[22m /user/createWithList: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/items/properties/bio, /schema/items/properties/userStatus/enum, /schema/items/required/2 [32madded[39m
      - /schema/items/properties/userStatus/type [33mchanged[39m
      - /schema/items/properties/phone, /schema/items/properties/userStatus/format, /schema/items/required/2 [31mremoved[39m
      
[1mPOST[22m /user/createWithArray: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/items/properties/bio, /schema/items/properties/userStatus/enum, /schema/items/required/2 [32madded[39m
      - /schema/items/properties/userStatus/type [33mchanged[39m
      - /schema/items/properties/phone, /schema/items/properties/userStatus/format, /schema/items/required/2 [31mremoved[39m
      
[1mPOST[22m /user: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/properties/bio, /schema/properties/userStatus/enum, /schema/required/2 [32madded[39m
      - /schema/properties/userStatus/type [33mchanged[39m
      - /schema/properties/phone, /schema/properties/userStatus/format, /schema/required/2 [31mremoved[39m
      
[1mDELETE[22m /store/order/{orderId}: 
  - response [1m404[22m: 
    - body [1mapplication/json[22m: [32madded[39m
      
[1mGET[22m /store/order/{orderId}: 
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/summary, /schema/properties/status/enum/2 [32madded[39m
      - /schema/properties/status/enum/1 [31mremoved[39m
      
    - body [1mapplication/xml[22m: 
      - /schema/properties/summary, /schema/properties/status/enum/2 [32madded[39m
      - /schema/properties/status/enum/1, /schema/required/1 [31mremoved[39m
      
  - response [1m404[22m: 
    - body [1mapplication/json[22m: [32madded[39m
      
[1mPOST[22m /store/order: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/properties/summary, /schema/properties/status/enum/2 [32madded[39m
      - /schema/properties/status/enum/1 [31mremoved[39m
      
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/summary, /schema/properties/status/enum/2 [32madded[39m
      - /schema/properties/status/enum/1 [31mremoved[39m
      
    - body [1mapplication/xml[22m: 
      - /schema/properties/summary, /schema/properties/status/enum/2 [32madded[39m
      - /schema/properties/status/enum/1 [31mremoved[39m
      
[1mPOST[22m /pet/{petId}/uploadImage: 
  - cookie parameter [3mundefined[23m: [32madded[39m
    - /schema/enum [32madded[39m
    
  - response [1m200[22m: [31mremoved[39m
  - response [1m201[22m: [32madded[39m
    
  - response [1m404[22m: [32madded[39m
    
  - response [1mdefault[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/type/type [33mchanged[39m
      
[1mGET[22m /pet: [31mremoved[39m
  
[1mPOST[22m /pet: 
  - /operationId [33mchanged[39m
  
[1mPUT[22m /pet: 
  - request: 
    - body [1mapplication/xml[22m: [31mremoved[39m
    - body [1mapplication/json[22m: 
      - /schema/properties/number, /schema/required/0 [32madded[39m
      - /schema/properties/name, /schema/required/0 [31mremoved[39m
      
  - response [1m400[22m: [31mremoved[39m
[1mGET[22m /example: 
  - query parameter [3mdeletedQueryParameter[23m: [31mremoved[39m
  - query parameter [3maddedQueryParameter[23m: [32madded[39m
    
  - query parameter [3mundefined[23m: 
    - /required [32madded[39m
    - /required [31mremoved[39m
    
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/requiredKeys/required/0, /schema/properties/requiredKeys/required/1, /schema/properties/requiredKeys/properties/addedRequiredKey, /schema/properties/expandableObject/anyOf/1 [32madded[39m
      - /schema/properties/toTypeArrays/type, /schema/properties/fromTypeArrays/type, /schema/properties/composedObject/allOf/0/properties/orderId/type [33mchanged[39m
      - /schema/properties/requiredKeys/required/0, /schema/properties/requiredKeys/required/1, /schema/properties/requiredKeys/properties/deletedRequiredKey, /schema/properties/stringOrNumberOrObject/oneOf/2 [31mremoved[39m
      
Checks

  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /example
    added rule: prevent new required query parameters
      [31m[31mx[39m[31m cannot add required query parameter addedQueryParameter to an existing operation. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:60:1906[24m

    changed rule: prevent requiring existing query parameters
      [31m[31mx[39m[31m cannot make optional query parameter 'optionalToRequired' required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:47:1494[24m

    added rule: query parameter naming check
      [31m[31mx[39m[31m addedQueryParameter is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:60:1906[24m

    changed rule: prevent making response property optional
      [31m[31mx[39m[31m cannot make required response property 'requiredToOptional' optional. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:114:3902[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'orderId'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:81:2600[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'deletedRequiredKey'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:112:3802[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'orderId' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:83:2701[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'fromTypeArrays' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:120:4226[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'toTypeArrays' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:119:4156[24m

    added rule: response property naming check
      [31m[31mx[39m[31m addedRequiredKey is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:115:3970[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /pet
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:127:4226[24m

    removed rule: prevent response status code removal
      [31m[31mx[39m[31m must not remove response status code 404. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:129:4268[24m

    removed rule: prevent response status code removal
      [31m[31mx[39m[31m must not remove response status code 405. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:130:4336[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPUT[22m /pet
    added rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot add a required request property 'number' to an existing operation. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:161:5273[24m

    removed rule: prevent response status code removal
      [31m[31mx[39m[31m must not remove response status code 400. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:223:7881[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /pet/{petId}/uploadImage
    changed rule: prevent cookie parameters enum breaking changes
      [31m[31mx[39m[31m cannot add an enum to restrict possible values for cookie parameter 'debug'. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:728:26749[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'code'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:375:13322[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'type'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:376:13392[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'message'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:377:13442[24m

    removed rule: prevent response status code removal
      [31m[31mx[39m[31m must not remove response status code 200. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:368:13083[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'type' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:794:28833[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPOST[22m /store/order


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /store/order/{orderId}
    changed rule: prevent making response property optional
      [31m[31mx[39m[31m cannot make required response property 'petId' optional. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:957:34662[24m



  [1m[42m[37m PASS [39m[49m[22m [1mDELETE[22m /store/order/{orderId}


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /user
    changed rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot make a request property required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1065:38733[24m

    changed rule: prevent request property type changes
      [31m[31mx[39m[31m expected request body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1070:38991[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /user/createWithArray
    changed rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot make a request property required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1105:40178[24m

    changed rule: prevent request property type changes
      [31m[31mx[39m[31m expected request body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1110:40446[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /user/createWithList
    changed rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot make a request property required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1146:41663[24m

    changed rule: prevent request property type changes
      [31m[31mx[39m[31m expected request body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1151:41931[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /user/login
    added rule: header parameter naming check
      [31m[31mx[39m[31m X-Rate-Limit is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:1196:43271[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /user/{username}
    changed rule: prevent making response property optional
      [31m[31mx[39m[31m cannot make required response property 'lastName' optional. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1253:45219[24m

    changed rule: prevent making response property optional
      [31m[31mx[39m[31m cannot make required response property 'lastName' optional. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1274:46138[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'phone'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:796:28299[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'phone'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:817:29184[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1256:45378[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1277:46297[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPUT[22m /user/{username}
    changed rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot make a request property required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1330:48050[24m

    changed rule: prevent request property type changes
      [31m[31mx[39m[31m expected request body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1335:48308[24m



  [1m[42m[37m PASS [39m[49m[22m /parameters_at_path


  [1m[42m[37m PASS [39m[49m[22m [1mGET[22m /parameters_at_path


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /pet/findByStatus
    added rule: operation path component naming check
      [31m[31mx[39m[31m findByStatus is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:304:10659[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:355:12509[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:399:14370[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /pet/findByTags
    added rule: operation path component naming check
      [31m[31mx[39m[31m findByTags is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:434:15684[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:471:17142[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:515:19003[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /pet/{petId}
    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:584:21551[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:625:23254[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPOST[22m /pet/{petId}


  [1m[42m[37m PASS [39m[49m[22m [1mDELETE[22m /pet/{petId}


6 operations added, 13 changed, 1 removed
[32m[1m155 checks passed[22m[39m
[31m[1m45 checks failed[22m[39m

Configure check standards in optic cloud or your local optic.dev.yml file.
[34mRerun this command with the --web flag to view the detailed changes in your browser[39m
"
`;

exports[`diff two files, no repo or config 1`] = `
"
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mPOST[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
[34mRerun this command with the --web flag to view the detailed changes in your browser[39m
"
`;

exports[`diff with --standard arg 1`] = `
"
[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[42m[37m PASS [39m[49m[22m [1mGET[22m /example


  [1m[42m[37m PASS [39m[49m[22m [1mPATCH[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPUT[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /invalid_name
    requirement rule: operation path component naming check
      [31m[31mx[39m[31m invalid_name is not camelCase[39m
      at [4m$workspace$/example-api-v1.json:31:632[24m



1 operation added, 3 changed, 1 removed
[32m[1m3 checks passed[22m[39m
[31m[1m2 checks failed[22m[39m

Configure check standards in optic cloud or your local optic.dev.yml file.
[34mRerun this command with the --web flag to view the detailed changes in your browser[39m
"
`;

exports[`diff with mock server custom rules 1`] = `
"
[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[42m[37m PASS [39m[49m[22m Specification


  [1m[42m[37m PASS [39m[49m[22m [1mGET[22m /example


  [1m[42m[37m PASS [39m[49m[22m [1mPATCH[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPUT[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /invalid_name
    requirement rule: operation path component naming check
      [31m[31mx[39m[31m invalid_name is not camelCase[39m
      at [4m$workspace$/example-api-v1.json:31:632[24m



1 operation added, 3 changed, 1 removed
[32m[1m5 checks passed[22m[39m
[31m[1m2 checks failed[22m[39m

Configure check standards in optic cloud or your local optic.dev.yml file.
[34mRerun this command with the --web flag to view the detailed changes in your browser[39m
"
`;

exports[`diff with mock server extends 1`] = `
"Extending ruleset from @test-org/ruleset-id

[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[42m[37m PASS [39m[49m[22m [1mGET[22m /example


  [1m[42m[37m PASS [39m[49m[22m [1mPATCH[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPUT[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /invalid_name
    requirement rule: operation path component naming check
      [31m[31mx[39m[31m invalid_name is not camelCase[39m
      at [4m$workspace$/example-api-v1.json:31:632[24m



1 operation added, 3 changed, 1 removed
[32m[1m3 checks passed[22m[39m
[31m[1m2 checks failed[22m[39m

Configure check standards in optic cloud or your local optic.dev.yml file.
[34mRerun this command with the --web flag to view the detailed changes in your browser[39m
"
`;

exports[`diff with mock server ruleset key on api spec 1`] = `
"
specification details:
- /x-optic-standard [32madded[39m

[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



1 operation added, 3 changed, 1 removed
[32m[1m0 checks passed[22m[39m
[31m[1m1 checks failed[22m[39m

Configure check standards in optic cloud or your local optic.dev.yml file.
[34mRerun this command with the --web flag to view the detailed changes in your browser[39m
"
`;

exports[`diff with mock server uploads specs if authenticated 1`] = `
"
[1mPATCH[22m /example: 
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      - /schema/type [33mchanged[39m
      
Checks

  [1m[41m[37m FAIL [39m[49m[22m [1mPATCH[22m /example
    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body application/json root shape to not change type. This is a breaking change.[39m
      at [4m$workspace$/spec.json:24:565[24m



1 operation changed
[32m[1m0 checks passed[22m[39m
[31m[1m1 checks failed[22m[39m
Uploaded results of diff to http://localhost:3000/organizations/org-id/apis/api-id/runs/run-id
"
`;
